--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,38 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <!-- Flash messages fixed at top -->
+    <div class="fixed top-0 left-0 right-0 z-50">
+      <% if notice %>
+        <div class="alert alert-success shadow-lg mx-4 mt-4 relative" data-controller="flash" data-flash-autohide-value="5000">
+          <div class="flex items-center flex-1">
+            <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            <span><%= notice %></span>
+          </div>
+          <button class="btn btn-sm btn-ghost btn-circle absolute top-2 right-2 hover:bg-base-200" data-action="click->flash#close">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+      <% end %>
+      
+      <% if alert %>
+        <div class="alert alert-error shadow-lg mx-4 mt-4 relative" data-controller="flash" data-flash-autohide-value="5000">
+          <div class="flex items-center flex-1">
+            <svg xmlns="http://www.w3.org/2000/svg" class="stroke-current flex-shrink-0 h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+            <span><%= alert %></span>
+          </div>
+          <button class="btn btn-sm btn-ghost btn-circle absolute top-2 right-2 hover:bg-base-200" data-action="click->flash#close">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+      <% end %>
+    </div>
+
+    <main id="main-content" class="<%= 'pt-16' if notice || alert %>">
       <%= yield %>
     </main>
   </body>
