--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -8,7 +8,7 @@
         <h3 class="font-bold">
           <%= I18n.t("errors.messages.not_saved",
                      count: resource.errors.count,
-                     resource: resource.class.model_name.human.downcase)
+                     resource: resource.class.model_name.human&.downcase || 'item')
            %>
         </h3>
         <div class="text-xs">
