--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,16 @@
 <html>
   <head>
     <title><%= content_for(:title) || "Daisy Panel" %></title>
-    <meta name="viewp    <main id="main-content" class="min-h-screen bg-base-200 <%= 'pt-4' if notice || alert %>">"rt" content="width=device-width,initial-scale=1">
+    <meta name="viewp    <main id="main-content" class="min-h-screen bg-base-200 <%= 'pt-4' if notice || alert %>">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    
+    <!-- Meta tag para ActionCable -->
+    <% if user_signed_in? %>
+      <meta name="current-user" content="<%= current_user.id %>">
+    <% end %>
 
     <%= yield :head %>
 
