feat: Add appointment management functionality
- Created appointments table in the database schema with necessary fields and foreign key.
- Updated seeds file to generate sample appointments for testing, including past, ongoing, and future appointments.
- Added FactoryBot factory for appointments to facilitate test data creation.
- Implemented feature specs for appointment management, covering viewing, creating, editing, deleting, and searching appointments.
- Developed request specs for admin appointments, ensuring proper authorization and appointment filtering.
- Added model specs for appointment validations and associations.
- Updated authentication helpers to include sign-out functionality.
- Adjusted ESLint configuration to allow for a maximum of 10 warnings.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -34,7 +34,7 @@
           <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
             <li><%= link_to "Dashboard", admin_root_path %></li>
             <li><%= link_to "Clientes", admin_clients_path %></li>
-            <li><a href="#appointments">Compromissos</a></li>
+            <li><%= link_to "Compromissos", admin_appointments_path %></li>
           </ul>
         </div>
         <%= link_to admin_root_path, class: "btn btn-ghost normal-case text-xl" do %>
@@ -48,7 +48,7 @@
         <ul class="menu menu-horizontal px-1">
           <li><%= link_to "Dashboard", admin_root_path %></li>
           <li><%= link_to "Clientes", admin_clients_path %></li>
-          <li><a href="#appointments">Compromissos</a></li>
+            <li><%= link_to "Compromissos", admin_appointments_path %></li>
         </ul>
       </div>
       <div class="navbar-end">
